# AI_Data_Explorer

./: .gitignore  README.md  pyproject.toml  settings.toml
src/datavisapp/: api.py  app4.py  config.py  data_loader.py  data_processor.py  query_parser.py  visualizer.py
